# rules_prerender

./: .bazelignore  .bazelrc  .ci.bazelrc  .eslintrc.yaml  .git-blame-ignore-revs  .gitignore  .npmrc  BUILD.bazel  BUILD.publish  Cargo.toml  README.md  WORKSPACE  WORKSPACE.bazel  aspect_rules_ts_issue_284.patch  declarative_shadow_dom.ts  dependencies.bzl  howto.txt  index.bzl  jest.config.js  npm_repositories.bzl  package-lock.json  package.bzl  package.json  package.parcel.json  package_nodejs.bzl  pnpm-lock.yaml  pnpm-workspace.yaml  repositories.bzl  rules_postcss  tsconfig.client.json  tsconfig.json  tsconfig.karma.json
bazel/browsers/: BUILD.bazel  browser_archive_repo.bzl  browser_repositories.bzl  browser_toolchain_alias.bzl
common/: BUILD.bazel  BUILD.publish  binary.mts  binary.ts  binary_test.mts  binary_test.ts  collections.mts  collections.ts  collections_test.mts  collections_test.ts  file_system.mts  file_system_fake.mts  file_system_fake.ts  formatters.ts  formatters_test.mts  formatters_test.ts  fs.ts  http.mts  http_test.mts  http_test.ts  label.bzl  label_test.bzl  paths.bzl  paths_test.bzl  prerender_annotation.ts  prerender_annotation_test.ts  prerender_annotation_walker.mts  prerender_annotation_walker.ts  prerender_annotation_walker_test.mts  prerender_annotation_walker_test.ts  prerender_metadata_test.ts  probably.ts  probably_test.mts  probably_test.ts  runfiles.ts  runfiles_test.ts
common/models/: BUILD.bazel  json.ts  prerender_annotation.mts  prerender_annotation.ts  prerender_annotation_mock.mts  prerender_annotation_mock.ts  prerender_annotation_test.mts  prerender_annotation_test.ts  prerender_metadata.mts  prerender_metadata.ts  prerender_metadata_mock.mts  prerender_metadata_mock.ts  prerender_metadata_test.mts  prerender_metadata_test.ts  prerender_resource.mts  prerender_resource.ts  prerender_resource_test.mts  prerender_resource_test.ts  url_path.ts  url_path_test.mts  url_path_test.ts
common/safe_html/: BUILD.bazel  safe_html.mts  safe_html_impl.mts  safe_html_impl_test.mts  unsafe_html.mts
common/testing/: BUILD.bazel  binary.mts  binary.ts  binary_test.mts  binary_test.ts  devserver.mts  devserver.ts  devserver_test.mts  devserver_test.ts  devserver_test_page.html  effect_fake.mts  effect_fake.ts  effect_fake_test.mts  effect_fake_test.ts  effect_tester.mts  effect_tester.ts  effect_tester_test.mts  effect_tester_test.ts  effects.mts  effects.ts  effects_test.mts  effects_test.ts  mocks.mts  mocks.ts  mocks_test.mts  mocks_test.ts  proxy.ts  proxy_test.ts  puppeteer.ts  puppeteer_test.ts  temp_dir.mts  temp_dir.ts  temp_dir_test.mts  temp_dir_test.ts  test_server.mts  test_server_test.mts  test_server_test.ts  webdriver.mts  webdriver.ts  webdriver_test.mts  (+2 more)
docs/: BUILD.bazel  README.md  global.css  netlify.toml  route.mts  routing.mts  routing_mock.mts  routing_test.mts  site.tsx  test_id.mts  test_id_test.mts  theme.css
docs/architecture/: component.dot  component_aliases.dot  component_composition.dot  prerender_component.md  publishing_components.md
docs/common/: BUILD.bazel  delayed.mts  delayed_test.mts  imperative_iterator.mts  imperative_iterator_test.mts  iterables.mts  iterables_test.mts
docs/markdown/: BUILD.bazel  markdown_loader.mts  markdown_loader_test.mts  markdown_page.mts  markdown_page_mock.mts  markdown_page_test.mts  markdown_testdata.md
docs/www/: BUILD.bazel  index.css  index.tsx  index_test.tsx
examples/components/: BUILD.bazel  README.md  component.mts  component.ts  component.tsx  dep.mts  dep.ts  dep.tsx  page.ts  site.mts  site.tsx  test.mts  test.ts  transitive.mts  transitive.tsx  ts_dep.ts
examples/custom_bundling/: BUILD.bazel  README.md  page.ts  test.ts
examples/data/: BUILD.bazel  pages.ts  site.mts  site.tsx  test.mts  test.ts
examples/declarative_shadow_dom/: BUILD.bazel  README.md  component.css  component.mts  component.ts  component.tsx  site.mts  site.ts  site.tsx  test.mts  test.ts
examples/empty_script/: BUILD.bazel  empty_script.mts  site.tsx  test.mts
examples/extract/: BUILD.bazel  nested_resource.mts  nested_resource.ts  nested_resource_expected.txt  single_resource.mts  single_resource.ts  single_resource_expected.txt
examples/inline_styles/: BUILD.bazel  page.ts  styles.css  test.ts
examples/javascript/: BUILD.bazel  README.md  entry.ts  metadata_golden.json  metadata_test.sh  page.js  page.mjs  page.ts  script.ts  site.mjs  test.mts  test.ts
examples/minimal/: BUILD.bazel  README.md  cypress_plugins.ts  cypress_test.ts  dep.mts  dep.ts  page.golden.html  page.ts  page_test.sh  site.mts  site.tsx  test.mts  test.ts
examples/multi_page/: BUILD.bazel  README.md  pages.mts  pages.ts  site.mts  site.tsx  test.mts  test.ts
examples/preact/: BUILD.bazel  site.tsx  test.mts
examples/prerender_resources/: BUILD.bazel  README.md  generator.mts  generator.ts  generator_test.ts
examples/resources/: BUILD.bazel  README.md  page.mts  page.ts  site.tsx  test.mts  test.ts
examples/rewrite/: .bazeliskrc  .bazelrc  BUILD.bazel  WORKSPACE.bazel  package.json  pnpm-lock.yaml  site.prerender.tsx  tsconfig.json
examples/script_isolation/: BUILD.bazel  README.md  bar.mts  foo.mts  foo.ts  site.mts  site.tsx  test.mts  test.ts
renderer/: BUILD.bazel  dynamic_import.ts  entry_point.ts  entry_point_test.ts  renderer.ts  renderer_test.ts
tools/: BUILD.bazel  bazel_stamp_vars.sh  jasmine.bzl  jasmine.json  jasmine_node_test.bzl  jasmine_web_test_suite.bzl  jest.bzl  publish.bzl  transitive_sources.bzl  typescript.bzl
tools/bazelrc/: ci.bazelrc  common.bazelrc  debug.bazelrc  incompatible.bazelrc  release.bazelrc
tools/binaries/: README.md
tools/browsers/: BUILD.bazel  README.md  browser_archive_repo.bzl  browser_configure.bzl  browser_repositories.bzl  browser_toolchain_alias.bzl  chromium_local_debug.json
tools/constraints/: BUILD.bazel
tools/dependencies/: BUILD.bazel  defs.bzl  prune_dependencies.bzl
tools/flags/: BUILD.bazel  README.md
user/: README.md  WORKSPACE.bazel  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
user/app/: page.ts  (+1 more)
(+521 files in other folders)
