[package]
name = "rules_prerender"
version = "0.0.0"

[lib]
path = "fake_lib.rs"

[dependencies]
clap = { version = "3.0.12" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tempdir = "0.3.7"
futures = "0.3.19"
tokio = { version = "1", features = [ "full" ] }
async-recursion = "1.0.0"

[package.metadata.raze]
workspace_path = "//cargo"
genmode = "Remote"