load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//tools/jasmine:defs.bzl", "jasmine_node_test")
load("//tools/typescript:defs.bzl", "ts_project")
load(":label_test.bzl", "label_test_suite")
load(":paths_test.bzl", "paths_test_suite")

ts_project(
    name = "binary",
    srcs = ["binary.mts"],
    # Needs to be public because this gets directly linked in the renderer entry
    # point generated in the user's workspace.
    visibility = ["//visibility:public"],
    deps = ["//:node_modules/@types/node"],
)

ts_project(
    name = "binary_test_lib",
    testonly = True,
    srcs = ["binary_test.mts"],
    deps = [
        ":binary",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "binary_test",
    deps = [":binary_test_lib"],
)

ts_project(
    name = "collections",
    srcs = ["collections.mts"],
    visibility = ["//:__subpackages__"],
)

ts_project(
    name = "collections_test_lib",
    testonly = True,
    srcs = ["collections_test.mts"],
    deps = [
        ":collections",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "collections_test",
    deps = [":collections_test_lib"],
)

ts_project(
    name = "formatters",
    srcs = ["formatters.mts"],
    visibility = ["//:__subpackages__"],
)

ts_project(
    name = "formatters_test_lib",
    testonly = True,
    srcs = ["formatters_test.mts"],
    deps = [
        ":formatters",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "formatters_test",
    deps = [":formatters_test_lib"],
)

ts_project(
    name = "file_system",
    srcs = ["file_system.mts"],
    visibility = ["//:__subpackages__"],
    deps = ["//:node_modules/@types/node"],
)

ts_project(
    name = "file_system_fake",
    testonly = True,
    srcs = ["file_system_fake.mts"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":file_system",
        "//:node_modules/@types/node",
    ],
)

ts_project(
    name = "http",
    srcs = ["http.mts"],
    visibility = ["//:__subpackages__"],
    deps = ["//:node_modules/@types/node"],
)

ts_project(
    name = "http_test_lib",
    testonly = True,
    srcs = ["http_test.mts"],
    deps = [
        ":http",
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
    ],
)

jasmine_node_test(
    name = "http_test",
    deps = [":http_test_lib"],
)

bzl_library(
    name = "label",
    srcs = ["label.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "label_test_lib",
    srcs = ["label_test.bzl"],
    deps = [":label"],
)

label_test_suite(name = "label_test")

bzl_library(
    name = "paths",
    srcs = ["paths.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "paths_test_lib",
    srcs = ["paths_test.bzl"],
    deps = [":paths"],
)

paths_test_suite(name = "paths_test")

ts_project(
    name = "prerender_annotation_walker",
    srcs = ["prerender_annotation_walker.mts"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:node_modules/node-html-parser",
        "//common/models:prerender_annotation",
    ],
)

ts_project(
    name = "prerender_annotation_walker_test_lib",
    testonly = True,
    srcs = ["prerender_annotation_walker_test.mts"],
    data = ["//:node_modules/node-html-parser"],
    deps = [
        ":prerender_annotation_walker",
        "//:node_modules/@types/jasmine",
        "//:node_modules/node-html-parser",
        "//common/models:prerender_annotation",
    ],
)

jasmine_node_test(
    name = "prerender_annotation_walker_test",
    deps = [":prerender_annotation_walker_test_lib"],
)

ts_project(
    name = "probably",
    srcs = ["probably.mts"],
    visibility = ["//:__subpackages__"],
)

ts_project(
    name = "probably_test_lib",
    testonly = True,
    srcs = ["probably_test.mts"],
    deps = [
        ":probably",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "probably_test",
    deps = [":probably_test_lib"],
)
