load(
    "//:index.bzl",
    "css_library",
    "prerender_pages",
    "web_resources_devserver",
)
load("//tools/typescript:defs.bzl", "ts_project")

prerender_pages(
    name = "site",
    entry_point = "./site.js",
    prerender = ":prerender",
    styles = ":styles",
)

ts_project(
    name = "prerender",
    srcs = ["site.tsx"],
    deps = [
        "//docs/components/layout:layout_prerender",
        "//:node_modules/@rules_prerender/preact",
    ],
)

css_library(
    name = "styles",
    srcs = ["site.css"],
)

css_library(
    name = "theme",
    srcs = ["theme.css"],
    visibility = [":__subpackages__"],
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)
