load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load(
    "//:index.bzl",
    "css_library",
    "prerender_pages",
    "web_resources",
    "web_resources_devserver",
)
load("//tools/netlify:defs.bzl", "netlify_deploy")
load("//tools/typescript:defs.bzl", "ts_project")

copy_to_bin(
    name = "package",
    srcs = ["package.json"],
    visibility = [":__subpackages__"],
)

prerender_pages(
    name = "site",
    entry_point = "./site.js",
    prerender = ":prerender",
    resources = ":resources",
)

ts_project(
    name = "prerender",
    srcs = ["site.tsx"],
    # Need `"type": "module"` to load `*.js` files output by `*.tsx` compilation.
    data = [":package"],
    deps = [
        ":route",
        "//docs/components/under_construction:under_construction_prerender",
        "//docs/www:index_prerender",
        "//docs/www/not_found:not_found_prerender",
        "//:node_modules/@rules_prerender/preact",
    ],
)

ts_project(
    name = "route",
    srcs = ["route.mts"],
    visibility = [":__subpackages__"],
)

css_library(
    name = "theme",
    srcs = ["theme.css"],
    visibility = [":__subpackages__"],
)

web_resources(
    name = "resources",
    entries = {
        "/netlify.toml": "netlify.toml",
    },
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

netlify_deploy(
    name = "deploy",
    site = ":site",
)
