load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load(
    "//:index.bzl",
    "css_library",
    "prerender_pages",
    "web_resources",
    "web_resources_devserver",
)
load("//tools/jasmine:defs.bzl", "jasmine_node_test")
load("//tools/netlify:defs.bzl", "netlify_deploy")
load("//tools/typescript:defs.bzl", "ts_project")

copy_to_bin(
    name = "package",
    srcs = ["package.json"],
    visibility = [":__subpackages__"],
)

prerender_pages(
    name = "site",
    entry_point = "./site.js",
    prerender = ":prerender",
    resources = ":resources",
)

ts_project(
    name = "prerender",
    srcs = ["site.tsx"],
    data = [
        # Need `"type": "module"` to load `*.js` files output by `*.tsx`
        # compilation.
        ":package",
        "//docs/www:tutorials/components/components.md",
        "//docs/www:tutorials/getting_started/getting_started.md",
    ],
    deps = [
        ":routing",
        "//docs/components/markdown:markdown_prerender",
        "//docs/components/under_construction:under_construction_prerender",
        "//docs/markdown:markdown_loader",
        "//docs/www:index_prerender",
        "//docs/www/not_found:not_found_prerender",
        "//:node_modules/@rules_prerender/preact",
    ],
)

ts_project(
    name = "route",
    srcs = ["route.mts"],
    visibility = [":__subpackages__"],
)

ts_project(
    name = "routing",
    srcs = ["routing.mts"],
    visibility = [":__subpackages__"],
    deps = [
        "//docs/common:iterables",
        "//:node_modules/@types/node",
        "//:node_modules/rules_prerender",
    ],
)

ts_project(
    name = "routing_mock",
    srcs = ["routing_mock.mts"],
    testonly = True,
    visibility = [":__subpackages__"],
    deps = [
        ":routing",
        "//:node_modules/rules_prerender",
    ],
)

ts_project(
    name = "routing_test_lib",
    srcs = ["routing_test.mts"],
    testonly = True,
    deps = [
        ":routing",
        ":routing_mock",
        "//docs/common:iterables",
        "//:node_modules/@types/jasmine",
        "//:node_modules/rules_prerender",
    ],
)

jasmine_node_test(
    name = "routing_test",
    deps = [":routing_test_lib"],
)

ts_project(
    name = "test_id",
    srcs = ["test_id.mts"],
    visibility = [":__subpackages__"],
    deps = ["//:node_modules/preact"],
)

ts_project(
    name = "test_id_test_lib",
    srcs = ["test_id_test.mts"],
    testonly = True,
    deps = [
        ":test_id",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "test_id_test",
    deps = [":test_id_test_lib"],
)

css_library(
    name = "global",
    srcs = ["global.css"],
    visibility = ["//docs/components/layout:__pkg__"],
)

css_library(
    name = "theme",
    srcs = ["theme.css"],
    visibility = [":__subpackages__"],
)

web_resources(
    name = "resources",
    entries = {
        "/netlify.toml": "netlify.toml",
    },
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

netlify_deploy(
    name = "deploy",
    site = ":site",
)
